# pico-projects

./: .gitignore
3d-touch/: ArialRounded27.py  main.py
analyze_chip_data/: data.csv  decoder.py  isfread.py  reader.py
as5600/hello-world/: as5600_example.py  main.py  picolcd1inch3.py  rgb.py  temp.py
blink/: CMakeLists.txt  blink.c
bluetooth/csharp/: Getting Started with .NET.dib  test1.dib
bluetooth/python/: bleak-test.py  bluetooth_test.ipynb
custom-assembler/: CMakelists.txt  main.c
dcmotor/: encoder-test.py  main.py
encoder/code_pico/: ArialRounded.py  R_Encoder.py  Read_ADC.py  as5600_example.py  color_test.py  encoder_deneme.py  hello_world.py  i2c.py  main.py  picolcd1inch3.py  readme.txt  writer.py  writer_demo.py
encoder/code_picow/: index.html  main.py  script.js  secret.py
esp32/: readme.txt
esp32/esp-c3-13/: esp_c3_13.py
esp32/ttgo-display/: boot.py  tft.py
file_system/: CMakeLists.txt  file_system.cpp  file_system.hpp  main.cpp
function-pointer/: CMakelists.txt  main.c
hx711/: adc.py  first-test.py  hello-world.py  hx711_gpio.py  main.py  plot-data.py  plot-data2.py  test.ipynb
hx711/client/: SerialMock.py  plot-data2.py  pygame-test.py  test.ipynb
lcd/: beni oku.txt
lcd/hello-world/: CMakelists.txt  main.c
lcd/lib/: DEV_Config.c  LCD_1in3.c
logic_analyzer/: CMakeLists.txt  decoder.py  isfread.py  isfreader.ipynb  main.c  reader.py
nano/g-sensor/: fft-test.ipynb  (+1 more)
pico-lcd-13/: color_test.py  main.py  readme.txt  writer_demo.py
pico-res-touch-35/: Pico-ResTouch-LCD-3_5.stp
serial-port/: CMakelists.txt  main.c
(+27 files in other folders)
